header toggle working, need to fix overlap

--- a/vanko_site/pages/static/pages/css/header.css
+++ b/vanko_site/pages/static/pages/css/header.css
@@ -48,12 +48,33 @@ transform: rotate(-45deg) translate(-9px, 6px);
 transform: rotate(45deg) translate(-8px, -8px);
 }
 
-/* #dropMenu {
-    position: absolute;
-    top: 0px;
+/* Nav menu styles */
+
+
+#dropMenu {
+    -webkit-transition: 0.5s ease;
+    -moz-transition: 0.5s ease;
+    -ms-transition: 0.5s ease;
+    -o-transition: 0.5s ease;
+    transition: 0.5s ease;
+    background: #05668D;
+    color: #fff;
+    cursor: pointer;
+    font-size: 1rem;
+    height: auto;
     left: 0;
+    padding: 0;
+    position: fixed;
     width: 100%;
-    transition: .5s ease;
+    z-index: 0;
+}
+
+.retracted {
+    top: -160px;
+}
+
+.extended {
+    top: 4rem;
 }
 
 nav ul {
@@ -62,11 +83,7 @@ nav ul {
     text-decoration: none;
     background-color: #05668D;
     text-align: center;
-    padding: 5px;
-    position: relative;
-    top: -2px;
-    z-index: -1;
-    
+    margin: 0;
 }
 
 nav ul li {
@@ -84,6 +101,6 @@ nav li a {
     color: white;
     font-weight: 600;
     text-transform: uppercase;
-} */
+} 
 
 
