--- a/vanko_site/pages/static/pages/css/main.css
+++ b/vanko_site/pages/static/pages/css/main.css
@@ -22,6 +22,8 @@ html, body {
     margin: 0;
     padding: 0;
     font-family: 'Open Sans', sans-serif;
+    overflow: hidden;
+    z-index: -1;
 }
 
 h1, h2, h3 {
